# bigkinds-loader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
bigkinds_loader/: __init__.py  core.py
bigkinds_loader/depreciated/: HttpxScraper.py  PlayWrightScraper.py  Scraper.py
config/: main.yaml
data/: db.dvc
docs/: bigkinds_loader.rst  conf.py  modules.rst
examples/: query_news.ipynb
scripts/: run.py
tests/: __init__.py
